--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	<div id="wrapper">
 		<div id="formHeader">
 			<h1>Shopping List</h1>
-			<input type="text" id="item" size="50" maxlength="43">
+			<input type="text" id="item" size="40" maxlength="38">
 			<button id="add" class="btnAdd">Add</button>
 			<button id="delete" class="btnDelete">Delete</button>
 		</div>
 		<div id="list">
-			<p><input  type="checkbox" /><span>Bread</span></p>
+			<p><input class="done" type="checkbox" /><span>Bread</span></p>
 			<p><input class="done" type="checkbox" /><span>Butter</span></p>
 
 		</div>
